# codoc_in_vecdraw

./: .gitignore  LICENSE  README.md  check_app_attrs.py  debug_image.py  mcp_server.py  page_dump_text.html  plan.md  pyproject.toml  reflex_rerun.sh  requirements.txt  run_test_suite.sh  rxconfig.py
assets/: export_canvas.js
codoc_in_vecdraw/: codoc_in_vecdraw.py
codoc_in_vecdraw/components/: canvas.py  properties_panel.py  shapes.py  toolbar.py  topbar.py
codoc_in_vecdraw/states/: editor_state.py
testcases/debug_image/: run_test.py
testcases/debug_shapes/: run_test.py
testcases/debug_text/: run_test.py
